# oop

lab1/: CMakeLists.txt  main.cpp
lab1/include/: convert.h
lab1/src/: convert.cpp
lab1/test/: test.cpp
lab2/: CMakeLists.txt  main.cpp  money.cpp  money.h
lab2/include/: money.h
lab2/src/: money.cpp
lab2/test/: test.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: figure.h
lab3/src/: figure.cpp
lab3/tests/: test_figures.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: figure.h
lab4/src/: figure.cpp
lab4/tests/: test_figures.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: custom_memory_resource.h  pmr_stack.h
lab5/src/: custom_memory_resource.cpp
lab5/tests/: test_pmr_stack.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: dragon.h  factory.h  knight.h  npc.h  pegasus.h  visitor.h
lab6/src/: dragon.cpp  factory.cpp  knight.cpp  npc.cpp  observer.cpp  pegasus.cpp  visitor.cpp
lab6/tests/: CMakeLists.txt  test_battle.cpp  test_factory.cpp  test_npc.cpp  test_observer.cpp  test_visitor.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: dragon.h  game.h  knight.h  npc.h  observer.h  pegasus.h
lab7/src/: dragon.cpp  game.cpp  knight.cpp  npc.cpp  pegasus.cpp  visitor.cpp
lab7/tests/: CMakeLists.txt  test_battle.cpp  test_factory.cpp  test_game.cpp  test_npc.cpp  test_observer.cpp  test_visitor.cpp
